# env-doctor

./: .gitignore  404.html  CHANGELOG.md  CHANGES-cuda-install-run.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  README.md  checklist.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: CODEOWNERS  docs.yml  publish-pypi.yml  tests.yml  update_db.yml
ADDING_MODELS/: index.html
CONTAINER_BEST_PRACTICES/: index.html
QUICK_START_MCP/: index.html
architecture/: index.html
commands/check/: index.html
commands/cuda-info/: index.html
commands/cuda-install/: index.html
commands/cudnn-info/: index.html
commands/dashboard/: index.html
commands/debug/: index.html
commands/docker-compose/: index.html
commands/dockerfile/: index.html
commands/init/: index.html
commands/install/: index.html
commands/model/: index.html
commands/python-compat/: index.html
commands/scan/: index.html
commands/wsl/: index.html
docs/: ADDING_MODELS.md  CONTAINER_BEST_PRACTICES.md  MCP_TESTING.md  QUICK_START_MCP.md  architecture.md  getting-started.md  index.md  robots.txt
docs/commands/: check.md  cuda-info.md  cuda-install.md  cudnn-info.md  dashboard.md  debug.md  docker-compose.md  dockerfile.md  init.md  install.md  model.md  python-compat.md  scan.md  wsl.md
docs/guides/: MCP_TESTING.md  ci-cd.md  fleet-monitoring.md  mcp-integration.md  recording-demos.md  wsl2.md
docs/stylesheets/: extra.css
examples/github-actions/: validate-env.yml
getting-started/: index.html
guides/MCP_TESTING/: index.html
guides/ci-cd/: index.html
guides/fleet-monitoring/: index.html
guides/mcp-integration/: index.html
guides/recording-demos/: index.html
guides/wsl2/: index.html
overrides/: main.html
scripts/: seed_demo_fleet.py
search/: search_index.json
src/env_doctor/: __init__.py  api.py  check.md  checks.py  ci.py  cli.py  compatibility.json  compatibility_1.json  db.py  identity.py  installer.py  migrations.json
stylesheets/: extra.css
tests/: README_MCP_TESTS.md  conftest.py  test_mcp_interactive.py  test_mcp_manual.sh  test_mcp_tools.py
tests/fixtures/: Dockerfile.cpu_base_with_torch  Dockerfile.invalid  Dockerfile.multi_lib_all_verified  Dockerfile.multistage  (+7 more)
tools/: scraper.py  validator.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+86 files in other folders)
