[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-doctor"
version = "0.1.2"
description = "A CLI tool to verify and fix AI/ML environment compatibility (Driver <-> CUDA <-> Wheels)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Mitul Garg", email = "mitulgarg3@gmail.com" },
  { name = "Tharun Anand", email = "atharun05@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "nvidia-ml-py>=11.0.0,<14.0.0",
    "packaging>=21.0,<26.0",
    "click>=8.0.0,<9.0.0",
    "requests>=2.25.0,<3.0.0",
    "pyyaml>=5.4,<7.0",
]

[project.scripts]
env-doctor = "env_doctor.cli:main"
doctor = "env_doctor.cli:main"

[project.urls]
"Homepage" = "https://github.com/mitulgarg/env-doctor"
"Bug Tracker" = "https://github.com/mitulgarg/env-doctor/issues"

# --- SRC LAYOUT CONFIGURATION ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

